[gd_scene load_steps=30 format=3 uid="uid://b5gigobueilix"]

[ext_resource type="Script" uid="uid://ckjt1t4tl5soy" path="res://Scripts/menus/main_menu.gd" id="1_oinqm"]
[ext_resource type="FontFile" uid="uid://behuf74h25j5t" path="res://GameAssets/DynaPuff/DynaPuff-VariableFont_wdth,wght.ttf" id="1_ugjs1"]
[ext_resource type="Texture2D" uid="uid://yv20cwmhlpwh" path="res://Assets/Art/MenuBubble.png" id="5_84j0t"]
[ext_resource type="Texture2D" uid="uid://58hkgo1s8li0" path="res://Assets/Art/Title_Sheet.png" id="5_styjg"]
[ext_resource type="Texture2D" uid="uid://gbmwr3ji3ra3" path="res://Assets/Art/BubblesSheet.png" id="5_xd7ie"]
[ext_resource type="Theme" uid="uid://cfuny4aqpg8r2" path="res://Resources/default_theme.tres" id="6_actju"]
[ext_resource type="Script" uid="uid://btxyy03cgiojw" path="res://Scripts/menus/valikko_apina.gd" id="6_cx4xl"]
[ext_resource type="Texture2D" uid="uid://ud00kehm07pv" path="res://Assets/Art/BubblesWhoa.png" id="7_5egv6"]
[ext_resource type="Texture2D" uid="uid://cuxs0jdep2tjs" path="res://Assets/Art/BubbleBGTexture.png" id="7_pyfg4"]
[ext_resource type="Texture2D" uid="uid://c4mgs6y8y43he" path="res://Assets/Art/ActualBubble_Sheet.png" id="8_yoddx"]
[ext_resource type="AudioStream" uid="uid://coi0eovow878l" path="res://Assets/Audio/SFX/mixkit-cartoon-creature-pain-scream-101.wav" id="9_t1dhk"]
[ext_resource type="AudioStream" uid="uid://blwan44chay8p" path="res://Assets/Audio/SFX/bubble-pop.mp3" id="12_s5yk8"]
[ext_resource type="PackedScene" uid="uid://biqwbx2o6j8yg" path="res://Scenes/menus/Buttons/bubble_button.tscn" id="14_nnvic"]

[sub_resource type="Theme" id="Theme_avieb"]
Button/fonts/font = ExtResource("1_ugjs1")
Label/fonts/font = ExtResource("1_ugjs1")

[sub_resource type="AtlasTexture" id="AtlasTexture_t8ox7"]
atlas = ExtResource("5_styjg")
region = Rect2(0, 0, 630, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2scx"]
atlas = ExtResource("5_styjg")
region = Rect2(630, 0, 630, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_bq2v4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8ox7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2scx")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vr1f0"]
radius = 156.697

[sub_resource type="AtlasTexture" id="AtlasTexture_68v2j"]
atlas = ExtResource("5_xd7ie")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyr0n"]
atlas = ExtResource("5_xd7ie")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_64lv3"]
atlas = ExtResource("5_xd7ie")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtepg"]
atlas = ExtResource("7_5egv6")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dnnj"]
atlas = ExtResource("7_5egv6")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3bi6"]
atlas = ExtResource("7_5egv6")
region = Rect2(0, 256, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_g6qib"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_68v2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyr0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64lv3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtepg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dnnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3bi6")
}],
"loop": false,
"name": &"whoa!",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_58nmk"]
atlas = ExtResource("8_yoddx")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctnhm"]
atlas = ExtResource("8_yoddx")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5850"]
atlas = ExtResource("8_yoddx")
region = Rect2(256, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_ea5kg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_58nmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctnhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5850")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = SubResource("Theme_avieb")
script = ExtResource("1_oinqm")

[node name="GameTitle" type="AnimatedSprite2D" parent="."]
position = Vector2(508, 358)
scale = Vector2(1.425, 1.425)
sprite_frames = SubResource("SpriteFrames_bq2v4")
autoplay = "default"
metadata/_edit_lock_ = true

[node name="BubblesMainMenu" type="Node2D" parent="."]
position = Vector2(1476, 477)
script = ExtResource("6_cx4xl")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="BubblesMainMenu"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BubblesMainMenu/Area2D"]
shape = SubResource("CircleShape2D_vr1f0")

[node name="ApinaBubbles" type="AnimatedSprite2D" parent="BubblesMainMenu"]
position = Vector2(0, -8)
scale = Vector2(2.265, 2.265)
sprite_frames = SubResource("SpriteFrames_g6qib")
autoplay = "default"
metadata/_edit_group_ = true

[node name="Bubble" type="Sprite2D" parent="BubblesMainMenu"]
scale = Vector2(2.89, 2.89)
texture = ExtResource("7_pyfg4")
metadata/_edit_group_ = true

[node name="BubbleOutline" type="AnimatedSprite2D" parent="BubblesMainMenu"]
z_index = 1
position = Vector2(0.160034, -5.84)
scale = Vector2(2.94, 2.94)
sprite_frames = SubResource("SpriteFrames_ea5kg")
autoplay = "default"
metadata/_edit_group_ = true

[node name="monkey_scream" type="AudioStreamPlayer" parent="BubblesMainMenu"]
stream = ExtResource("9_t1dhk")
volume_db = -18.0
bus = &"SFX"

[node name="pop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_s5yk8")
volume_db = -10.0
bus = &"SFX"

[node name="start_button" parent="." node_paths=PackedStringArray("label") instance=ExtResource("14_nnvic")]
layout_mode = 0
offset_left = 753.0
offset_top = 619.0
offset_right = 990.0
offset_bottom = 702.0
rotation = -0.0872665
scale = Vector2(1.2, 1)
button_action = "start game"
label = NodePath("start_label")

[node name="start_label" type="Label" parent="start_button"]
layout_mode = 0
offset_left = 19.9137
offset_top = 25.1785
offset_right = 214.914
offset_bottom = 110.179
rotation = -0.0237574
scale = Vector2(1.265, 1.265)
pivot_offset = Vector2(98, 21)
text = "Start game
"

[node name="how_to_play_button" parent="." node_paths=PackedStringArray("label") instance=ExtResource("14_nnvic")]
layout_mode = 0
offset_left = 800.0
offset_top = 865.0
offset_right = 1047.0
offset_bottom = 952.0
rotation = 0.20191
scale = Vector2(1.02348, 0.833028)
button_action = "how to play"
label = NodePath("how_to_play_label")

[node name="how_to_play_label" type="Label" parent="how_to_play_button"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.948
anchor_bottom = 0.888
offset_left = 21.7364
offset_top = 22.716
offset_right = -17.4196
offset_bottom = 30.46
rotation = 0.0385386
scale = Vector2(1.355, 1.355)
pivot_offset = Vector2(98, 21)
text = "How to play
"

[node name="about_us_button" parent="." node_paths=PackedStringArray("label") instance=ExtResource("14_nnvic")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.095
anchor_top = 0.885
anchor_right = 0.198
anchor_bottom = 0.913
offset_left = -6.39995
offset_top = -12.8001
offset_right = 42.84
offset_bottom = 43.96
rotation = -0.108272
scale = Vector2(0.902526, 0.746132)
button_action = "about us"
label = NodePath("about_us_label")

[node name="about_us_label" type="Label" parent="about_us_button"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.948
anchor_bottom = 0.888
offset_left = 35.6554
offset_top = 24.9102
offset_right = -47.5006
offset_bottom = -11.3459
rotation = -0.0132275
scale = Vector2(1.55, 1.55)
pivot_offset = Vector2(75, 20)
text = "About us"

[node name="settings_button" parent="." node_paths=PackedStringArray("label") instance=ExtResource("14_nnvic")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.095
anchor_top = 0.885
anchor_right = 0.198
anchor_bottom = 0.913
offset_left = -9.39998
offset_top = -256.8
offset_right = 39.84
offset_bottom = -200.04
rotation = 0.190976
scale = Vector2(0.902526, 0.746132)
button_action = "settings"
label = NodePath("settings_label")

[node name="settings_label" type="Label" parent="settings_button"]
layout_mode = 0
offset_left = 44.2105
offset_top = 22.4227
offset_right = 192.21
offset_bottom = 63.4227
rotation = 0.019176
scale = Vector2(1.68, 1.68)
pivot_offset = Vector2(75, 20)
theme = ExtResource("6_actju")
text = "Settings"

[node name="quit_button" parent="." node_paths=PackedStringArray("label") instance=ExtResource("14_nnvic")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.095
anchor_top = 0.885
anchor_right = 0.198
anchor_bottom = 0.913
offset_left = 1309.6
offset_top = -72.8
offset_right = 1358.84
offset_bottom = -16.0399
rotation = -0.207815
scale = Vector2(0.758, 0.626)
button_action = "quit"
label = NodePath("quit_label")

[node name="quit_label" type="Label" parent="quit_button"]
layout_mode = 0
offset_left = 76.9166
offset_top = 26.4667
offset_right = 152.917
offset_bottom = 67.4667
rotation = 0.019176
scale = Vector2(2.24, 2.24)
pivot_offset = Vector2(35, 20)
theme = ExtResource("6_actju")
text = "Quit"

[node name="level_select" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.507
anchor_top = 0.308
anchor_right = 0.62
anchor_bottom = 0.385
offset_left = 10.5599
offset_top = -5.64005
offset_right = 18.6
offset_bottom = 8.19998
metadata/_edit_lock_ = true

[node name="TextureButton" type="TextureButton" parent="level_select"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.349
anchor_top = 0.382
anchor_right = 0.68
anchor_bottom = 0.773
offset_left = -100.525
offset_top = -28.0539
offset_right = 1608.0
offset_bottom = 1070.02
rotation = -0.103876
scale = Vector2(0.148082, 0.100288)
texture_normal = ExtResource("5_84j0t")

[node name="Label" type="Label" parent="level_select"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.5
offset_top = -2.49994
offset_right = 104.5
offset_bottom = 38.5001
grow_horizontal = 2
grow_vertical = 2
rotation = -0.135747
theme = ExtResource("6_actju")
text = "Level select"

[connection signal="mouse_entered" from="BubblesMainMenu/Area2D" to="BubblesMainMenu" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="BubblesMainMenu/Area2D" to="BubblesMainMenu" method="_on_area_2d_mouse_exited"]
[connection signal="animation_finished" from="BubblesMainMenu/ApinaBubbles" to="BubblesMainMenu" method="_on_apina_bubbles_animation_finished"]
[connection signal="finished" from="pop" to="." method="_on_pop_finished"]
